app/assets/stylesheets/custom.css.scss
@import 'bootstrap/dist/css/bootstrap';

$v-btn-color: #586a80;
$icon-color: #366d98;
$white-label: #fefefc;
$background: #f5f6f8;
$navbar-background: #53a7e7;
$border: 1px solid rgb(15, 15, 15);

body {
  background-color: $background;
}

//navigations

.navigations {
  display: flex;
}

.horizontal-menu {
  width: 85%;
}

.navbar {
  background-color: $navbar-background;
}

.home-img {
  width: 50%;
  height: 80px;
  border-radius: 5%;
}

.navigation > p {
  padding: 2.1% 4.5%;
  margin-bottom: 0;
}

.name {
  color: $white-label;
}

.navbar-nav > li {
  margin-left: 30px;
  margin-right: 30px;
}

.fas {
  color: $icon-color;
}

.fas:hover {
  color: lighten($icon-color, 15%);
}

.logo {
  width: 11.7%;
  height: 11.7%;
  border-radius: 100%;
}

.sidebar {
  background-color: #1b2a3d;
  height: auto;
  width: 18%;
}

.v-menu {
  color: $v-btn-color;
  margin-left: 10%;
  margin-top: 15%;
}

.v-menu-left {
  color: $v-btn-color;
  margin-left: -10%;
  margin-top: 15%;
}

.v-menu:hover,
.v-menu-left:hover {
  text-decoration: none;
  color: darken($v-btn-color, 10%);
}

.following-stats,
.follower-stats {
  color: $white-label;
  margin-bottom: 0;
  margin-top: 20%;
  text-align: center;
}

.following-label,
.follower-label {
  color: $v-btn-color;
}

.relationship {
  display: flex;
  padding-left: 10%;
  border-top: $border;
  border-bottom: $border;
}

.follower {
  border-left: $border;
  margin-left: 10%;
}

.follower-stats,
.follower-label {
  margin-left: 25%;
}

//body

.body-container {
  display: flex;
}

// forms

input,
textarea,
select {
  width: 100%;
  margin-bottom: 15px;
}

.create-account-btn,
.login-btn {
  background-color: $icon-color;
  color: $white-label;
}

.welcome-img {
  width: 70%;
  margin-left: 10%;
  margin-top: 3%;
}

#error_explanation {
  color: red;

  ul {
    color: red;
    margin: 0 0 30px 0;
  }
}

.new-account-welcome {
  color: $v-btn-color;
}

.new-account-form {
  margin-top: 10%;
  margin-left: 15%;
  width: 70%;
}

.new-account {
  width: 50%;
}

.upload-button {
  width: 19%;
}

//Opinions

.opinion-container {
  width: 75%;
}

.opinion-heading {
  height: 100px;

  p {
    margin: 27px 3%;
  }

  hr {
    margin-top: 20px;
  }
}

.opinion-body,
.opinion-list {
  width: 85%;
  border: 1px solid $v-btn-color;
  border-radius: 5px;
  padding: 1%;
  background-color: $white-label;
}

.opinion-sharing-button {
  width: 20%;
  color: $v-btn-color;
}

.opinion-label {
  color: $v-btn-color;
}

.opinion-list-heading {
  padding: 2%;
  border-bottom: 1px solid $v-btn-color;

  p {
    color: $navbar-background;
  }
}

.opinions-info {
  display: flex;
  padding: 1.5%;
}

.opinion-img {
  width: 80px;
  height: 80px;
  border-radius: 5%;
}

.opinions-info-right {
  margin-left: 2%;

  p {
    color: $v-btn-color;
    max-width: 500px;
  }
}

//who to follow

.follow-container {
  height: auto;
  border-left: 1px solid rgba(128, 128, 128, 0.486);
  position: relative;
  width: 20%;
}

.follow-heading {
  margin-left: 5%;
  height: 79px;

  p {
    margin-top: 28px;
  }
}

.who-to-follow-img {
  width: 30%;
  height: 50px;
  border-radius: 50%;
}

.follow-hr {
  width: 80%;
  position: absolute;
  top: 62px;
  left: 7%;
}

.who-to-follow-name > h5 {
  color: black;
}

//user page

.cover-img {
  width: 100%;
  height: 305px;
  border-radius: 2px;
}

.user-stats {
  display: flex;
  border-top: $border;
  border-bottom: $border;
}

.right-profile {
  border-left: 1px solid rgba(128, 128, 128, 0.486);
  width: 25%;
}

.user-following,
.user-follower {
  border-left: $border;
  margin-left: 14px;
}

.right-profile-img {
  width: 50%;
  height: 100px;
  border-radius: 5%;
  margin-left: 27%;
}

.followed_by_text-container {
  width: 88%;

  hr {
    margin-top: 30px;
  }
}

.followed_by_text {
  color: $v-btn-color;
}

.alignment {
  margin-top: 70px;
}

.followers-info {
  display: flex;
  margin-left: 9%;
}

//pagination

.apple_pagination {
  background: #f1f1f1;
  border: 1px solid #e5e5e5;
  text-align: center;
  padding: 1em;
  cursor: default;
}

.apple_pagination a,
.apple_pagination span {
  padding: 0.2em 0.3em;
}

.apple_pagination .disabled {
  color: #aaa;
}

.apple_pagination .current {
  font-style: normal;
  font-weight: bold;
  background-color: #bebebe;
  display: inline-block;
  width: 1.4em;
  height: 1.4em;
  line-height: 1.5;
  -moz-border-radius: 1em;
  -webkit-border-radius: 1em;
  border-radius: 1em;
  text-shadow: rgba(255, 255, 255, 0.8) 1px 1px 1px;
}

.apple_pagination a {
  text-decoration: none;
  color: black;
}

.apple_pagination a:hover,
.apple_pagination a:focus {
  text-decoration: underline;
}

//relations

.follow-button {
  background-color: $navbar-background;
}

